--- a/index.html
+++ b/index.html
@@ -1,36 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kids School</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body class="quicksand">
-<header>
-    <nav class="school-nav-bar">
-        <div class="school-logo">
-            <img src="assets/logo.png" alt="">
-            <div class="logo-title">SCHOOL</div>
-        </div>
-        <div class="nav-bar-options">
-            <ul>
-                <a href=""><li class="li-color-1">Home</li></a>
-                <a href=""><li class="li-color-2">About</li></a>
-                <a href=""><li class="li-color-3">Facilities</li></a>
-                <a href=""><li class="li-color-4">Admission</li></a>
-            </ul>
-        </div>
+    <header>
+        <nav class="school-nav-bar">
+            <div class="school-logo">
+                <img src="assets/logo.png" alt="">
+                <div class="logo-title">SCHOOL</div>
+            </div>
+            <div class="nav-bar-options">
+                <ul>
+                    <a href="">
+                        <li class="li-color-1">Home</li>
+                    </a>
+                    <a href="">
+                        <li class="li-color-2">About</li>
+                    </a>
+                    <a href="">
+                        <li class="li-color-3">Facilities</li>
+                    </a>
+                    <a href="">
+                        <li class="li-color-4">Admission</li>
+                    </a>
+                </ul>
+            </div>
             <button class="contact-btn">Contact</button>
-    </nav>
-    <section class="banner-container">
-        <div class="banner-texts">
-            <h1 class="banner-title">Empowering students from small age towards vision</h1>
-            <p class="banner-subtitle">With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
-            <button class="enroll">Enroll Now</button>
-        </div>
-        <img src="assets/hero-kids.png" alt="">
-    </section>
-</header>  
+        </nav>
+        <section class="banner-container">
+            <div class="banner-texts">
+                <h1 class="banner-title"><span style="color: orange;">Empowering</span><br>students from small
+                    age<br><span style="color: skyblue;">towards vision</span></h1>
+                <p class="banner-subtitle">With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+                <button class="enroll-btn">Enroll Now</button>
+            </div>
+            <img src="assets/hero-kids.png" alt="" class="hero-bg">
+        </section>
+    </header>
 </body>
+
 </html>
