--- a/index.html
+++ b/index.html
@@ -37,12 +37,43 @@
             <div class="banner-texts">
                 <h1 class="banner-title"><span style="color: orange;">Empowering</span><br>students from small
                     age<br><span style="color: skyblue;">towards vision</span></h1>
-                <p class="banner-subtitle">With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+                <p class="banner-subtitle">With the courage, Confidence, Creativity and Compassion to make their Unique
+                    Contribution in a Diverse and Dynamic World.</p>
                 <button class="enroll-btn">Enroll Now</button>
             </div>
             <img src="assets/hero-kids.png" alt="" class="hero-bg">
         </section>
     </header>
+    <main>
+        <h1 class="curriculum-headline">Standard Curriculum</h1>
+        <section class="curriculum-container">
+            <div class="curriculum-cards">
+                <div class="curriculum-card-1">
+                    <img src="assets/kinder.png" alt="" class="curriculum-image">
+                    <h3 class="curriculum-title">Kinder (3-6) Years</h3>
+                    <p class="curriculum-subtitle">Children aging three to six years can enroll in this curriculum</p>
+                    <a href="" class="read-more"><span style="color: rgba(100, 200, 255, 1);">Read More</span></a>
+                </div>
+                <div class="curriculum-card-2">
+                    <img src="assets/elementary.png" alt="" class="curriculum-image">
+                    <h3 class="curriculum-title">Elementary School</h3>
+                    <p class="curriculum-subtitle">Children aging six to nine years can enroll in this curriculum</p>
+                    <a href="" class="read-more"><span style="color: rgba(240, 170, 0, 1);">Read More</span></a>
+                </div>
+                <div class="curriculum-card-3">
+                    <img src="assets/middle.png" alt="" class="curriculum-image">
+                    <h3 class="curriculum-title">Middle (10-16) Years</h3>
+                    <p class="curriculum-subtitle">Kid aging ten to sixteen years can enroll in this curriculum</p>
+                    <a href="" class="read-more"><span style="color: rgba(135, 0, 255, 1);">Read More</span></a>
+                </div>
+            </div>
+        </section>
+        <div class="arrows">
+            <button class="left-arrow">
+                <</button>
+                    <button class="right-arrow">></button>
+        </div>
+    </main>
 </body>
 
 </html>
