--- a/index.html
+++ b/index.html
@@ -70,9 +70,114 @@
         </section>
         <div class="arrows">
             <button class="left-arrow">
-                <</button>
+                < </button>
                     <button class="right-arrow">></button>
         </div>
+        <section class="stories">
+            <h1 class="story-headline">
+                Our Stories
+            </h1>
+            <div class="box-of-story">
+                <!-- .story-card-$*5>img.story-img+p.story-time+h4.story-title+p.story-synopsis -->
+                <div class="story-card-P1">
+                    <img src="assets/story-1.png" alt="" class="story-img-p1">
+                    <p class="story-time"><span
+                            style="background-color: rgba(60, 216, 232, 1);padding: 10px;border-radius: 47px;">November
+                            19,
+                            2019</span></p>
+                    <div class="story-text">
+                        <h4 class="story-title">A fun toddler coloring training on
+                            classroom</h4>
+                        <p class="story-synopsis">Beautiful branding for changes by Never Now in Australia.
+                            changes is a platform for open discussion in an inclusive and
+                            collaborative environment, providing the...</p>
+                    </div>
+                </div>
+                <div class="story-card-P2">
+                    <div class="story-card-2">
+                        <img src="assets/story-2.png" alt="" class="story-img">
+                        <p class="story-time"><span
+                                style="background-color: skyblue;padding: 10px;border-radius: 47px;">August 16,
+                                2019</span></p>
+                        <div class="story-text">
+                            <h4 class="story-title">Find out if a school fits the
+                                family’s needs</h4>
+                        </div>
+                    </div>
+                    <div class="story-card-3">
+                        <img src="assets/story-3.png" alt="" class="story-img">
+                        <p class="story-time"><span
+                                style="background-color: blueviolet;padding: 5px;border-radius: 47px;">October 10,
+                                2019</span>
+                        <div class="story-text">
+                            </p>
+                            <h4 class="story-title">Summer math & literacy
+                                centres for kids</h4>
+                        </div>
+                    </div>
+                    <div class="story-card-4">
+                        <img src="assets/story-4.png" alt="" class="story-img">
+                        <p class="story-time"><span
+                                style="background-color: rgb(31, 31, 100);padding: 10px;border-radius: 47px;">September
+                                10, 2019</span></p>
+                        <div class="story-text">
+                            <h4 class="story-title">Classroom management
+                                techniques for new tutors</h4>
+                        </div>
+                    </div>
+                    <div class="story-card-5">
+                        <img src="assets/story-5.png" alt="" class="story-img">
+                        <p class="story-time"><span
+                                style="background-color: slateblue;padding: 10px;border-radius: 47px;">July 19,
+                                2019</span></p>
+                        <div class="story-text">
+                            <h4 class="story-title">Conversation rhymes
+                                improve kids listening</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="view-align">
+                <button class="view-btn"> View All</button>
+            </div>
+        </section>
+        <footer>
+            <div class="footer-container">
+                <div class="education">
+                    <div class="mini-edu">
+                        <img src="assets/logo.png" alt="">
+                        <h1>Kids Education</h1>
+                    </div>
+                    <p class="edu-gyan">"Education is not the filling of a pail, but the lighting of a fire."<br>- William Butler Yeats</p>
+                </div>
+                <div class="about">
+                    <h3 class="about-title">About School</h3>
+                    <ul class="about-ul">
+                        <a href="">
+                            <li>Home</li>
+                        </a>
+                        <a href="">
+                            <li>About</li>
+                        </a>
+                        <a href="">
+                            <li>Facilities</li>
+                        </a>
+                        <a href="">
+                            <li>Admission</li>
+                        </a>
+                    </ul>
+                </div>
+                <div class="communication">
+                    <h3>Keep In Touch</h3>
+                    <div class="socials">
+                        <img src="assets/fb.png" alt="">
+                        <img src="assets/dribble.png" alt="">
+                        <img src="assets/twitter.png" alt="">
+                        <img src="assets/google+.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </footer>
     </main>
 </body>
 
