--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             </div>
             <button class="contact-btn">Contact</button>
         </nav>
+        <section class="marquee">
+            <marquee width="100%" direction="right" height="25px">Hurry Up! Admission is going to start from 30th February.</marquee>
+        </section>
         <section class="banner-container">
             <div class="banner-texts">
                 <h1 class="banner-title"><span style="color: orange;">Empowering</span><br>students from small
