--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
                 </ul>
             </div>
             <button class="contact-btn">Contact</button>
+            <button class="menu-toggle">&#9776;</button>
         </nav>
         <section class="marquee">
-            <marquee width="100%" direction="right" height="25px">Hurry Up! Admission is going to start from 30th February.</marquee>
+            <marquee width="100%" direction="right" height="25px">Hurry Up! Admission is going to start from 30th
+                February.</marquee>
         </section>
         <section class="banner-container">
             <div class="banner-texts">
@@ -48,28 +50,32 @@
         </section>
     </header>
     <main>
-        <h1 class="curriculum-headline">Standard Curriculum</h1>
-        <section class="curriculum-container">
-            <div class="curriculum-cards">
-                <div class="curriculum-card-1">
-                    <img src="assets/kinder.png" alt="" class="curriculum-image">
-                    <h3 class="curriculum-title">Kinder (3-6) Years</h3>
-                    <p class="curriculum-subtitle">Children aging three to six years can enroll in this curriculum</p>
-                    <a href="" class="read-more"><span style="color: rgba(100, 200, 255, 1);">Read More</span></a>
+        <section class="curriculum">
+            <h1 class="curriculum-headline">Standard Curriculum</h1>
+            <section class="curriculum-container">
+                <div class="curriculum-cards">
+                    <div class="curriculum-card-1">
+                        <img src="assets/kinder.png" alt="" class="curriculum-image">
+                        <h3 class="curriculum-title">Kinder (3-6) Years</h3>
+                        <p class="curriculum-subtitle">Children aging three to six years can enroll in this curriculum
+                        </p>
+                        <a href="" class="read-more"><span style="color: rgba(100, 200, 255, 1);">Read More</span></a>
+                    </div>
+                    <div class="curriculum-card-2">
+                        <img src="assets/elementary.png" alt="" class="curriculum-image">
+                        <h3 class="curriculum-title">Elementary School</h3>
+                        <p class="curriculum-subtitle">Children aging six to nine years can enroll in this curriculum
+                        </p>
+                        <a href="" class="read-more"><span style="color: rgba(240, 170, 0, 1);">Read More</span></a>
+                    </div>
+                    <div class="curriculum-card-3">
+                        <img src="assets/middle.png" alt="" class="curriculum-image">
+                        <h3 class="curriculum-title">Middle (10-16) Years</h3>
+                        <p class="curriculum-subtitle">Kid aging ten to sixteen years can enroll in this curriculum</p>
+                        <a href="" class="read-more"><span style="color: rgba(135, 0, 255, 1);">Read More</span></a>
+                    </div>
                 </div>
-                <div class="curriculum-card-2">
-                    <img src="assets/elementary.png" alt="" class="curriculum-image">
-                    <h3 class="curriculum-title">Elementary School</h3>
-                    <p class="curriculum-subtitle">Children aging six to nine years can enroll in this curriculum</p>
-                    <a href="" class="read-more"><span style="color: rgba(240, 170, 0, 1);">Read More</span></a>
-                </div>
-                <div class="curriculum-card-3">
-                    <img src="assets/middle.png" alt="" class="curriculum-image">
-                    <h3 class="curriculum-title">Middle (10-16) Years</h3>
-                    <p class="curriculum-subtitle">Kid aging ten to sixteen years can enroll in this curriculum</p>
-                    <a href="" class="read-more"><span style="color: rgba(135, 0, 255, 1);">Read More</span></a>
-                </div>
-            </div>
+            </section>
         </section>
         <div class="arrows">
             <button class="left-arrow">
@@ -151,7 +157,8 @@
                         <img src="assets/logo.png" alt="">
                         <h1>Kids Education</h1>
                     </div>
-                    <p class="edu-gyan">"Education is not the filling of a pail, but the lighting of a fire."<br>- William Butler Yeats</p>
+                    <p class="edu-gyan">"Education is not the filling of a pail, but the lighting of a fire."<br>-
+                        William Butler Yeats</p>
                 </div>
                 <div class="about">
                     <h3 class="about-title">About School</h3>
