A Little bit of change but finished

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <button class="menu-toggle">&#9776;</button>
         </nav>
         <section class="marquee">
-            <marquee width="100%" direction="right" height="25px">Hurry Up! Admission is going to start from 30th
+            <marquee width="100%" direction="right" height="25px">Hurry Up! Admission is going to finish at 30th
                 February.</marquee>
         </section>
         <section class="banner-container">
